# avatar_panda

./: .gitignore
avatar_dual_controllers/: CMakeLists.txt  avatar_dual_controllers_plugin.xml  package.xml
avatar_dual_controllers/NNweight/: backward_network_0_bias.txt  backward_network_0_weight.txt  backward_network_2_bias.txt  backward_network_2_weight.txt  backward_network_4_bias.txt  backward_network_4_weight.txt
avatar_dual_controllers/config/: avatar_dual_controllers.yaml  avatar_dual_controllers_dual.yaml  default_combined_controllers_single.yaml  franka_combined_control_node_dual.yaml  franka_combined_control_node_single.yaml
avatar_dual_controllers/launch/: avatar_controller_dual.launch  avatar_controller_single.launch
avatar_dual_controllers/src/: avatar_dual_controller.cpp  avatar_single_controller.cpp
avatar_env_description/: CMakeLists.txt  README.md  package.xml
avatar_env_description/robots/: avatar_env.urdf.xacro  avatar_env_single.urdf.xacro  dyros_avatar_gripper.urdf.xacro  dyros_avatar_gripper.xacro  dyros_avatar_gripper2.xacro
avatar_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
avatar_moveit_config/config/: ros_controllers.yaml
avatar_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group_right_only.launch  moveit_rviz.launch  panda_moveit.launch  (+12 more)
avatar_msgs/: CMakeLists.txt  README.md  package.xml
panda_moveit_config/: .setup_assistant  package.xml
(+26 files in other folders)
